--- a/._bashrc
+++ b/._bashrc
@@ -1,6 +1,6 @@
 # ~/.bashrc -- executed by bash(1) for non-login shells -- @ryankeleti --- mini-bash
 [[ $- != *i* ]] && return; PS1='[\u@\h \W]\$ ';shopt -s histappend cmdhist checkwinsize autocd
-HISTFILE=1000;HISTFILESIZE=;HISTCONTROL="erasedups:ignoreboth";export HISTIGNORE="&:ls:[bf]g:exit:qq:la:history:dir:i3c:wm:xrdbm:cdp:diskspace:dud1";unset HISTFILE
+HISTFILE=1000;HISTFILESIZE=;HISTCONTROL="erasedups:ignoreboth";export HISTIGNORE="&:ls:[bf]g:exit:qq:la:history:dir:wm:xrdbm:cdd:diskspace:dud1";unset HISTFILE
 alias cdd="cd ~/dotfiles";alias qq="exit";alias rm="rm -i";alias mv="mv -i";alias dir='dir --color=auto';alias ls='ls --color=auto';alias la='ls -AF'
 alias dud1="du -d1 -h|sort -hr";alias diskspace="du -S | sort -n -r |more";alias wm="sudo wifi-menu -o wlp1s0";alias xrdbm="xrdb -merge ~/.Xresources"
 alias v="vim --noplugins";alias vi="vim";bind -x '"\C-b": clear && printf "\e[3J"';export PROMPT_COMMAND=lastcmd
