--- a/.cconfig/conky.conf
+++ b/.cconfig/conky.conf
@@ -1,1 +1,52 @@
-/home/ryanku/.config/conky/conky.conf
+own_window yes                                                                                     
+own_window_class Conky
+own_window_colour 282828
+own_window_transparent yes
+own_window_argb_visual yes
+own_window_argb_value 0
+own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
+own_window_type dock
+double_buffer yes
+use_spacer right 
+use_xft yes
+#font snap-7
+xftfont Hyperspace:bold:size=7
+# xftfont DejaVu Sans Light:size=8
+xftalpha 1
+text_buffer_size 2048 
+# alignment is disabled when own_window_type is dock
+alignment middle_middle
+gap_x -210
+gap_y 150
+default_bar_size 20 6
+short_units yes
+
+# --- Colours, Sizes, Fonts & Margins --- #
+update_interval 1.0
+stippled_borders 0
+minimum_size 1920 6
+maximum_width 1920
+border_width 10 
+default_color d3d3d3
+# --- Text --- #
+draw_outline no
+draw_borders no
+uppercase yes
+draw_shades no 
+
+color0 a6e22e # Light green
+color1 beed5f # Lime
+color2 fd971f # Light Orange
+color3 ff669d # Pink
+color4 9e6ffe # Purple
+color5 00CBEE # Blue
+color6 6EC6D4 # Light grey
+alignment middle_right
+TEXT
+${alignc}${color0}Arch Linux${color}  |  \
+${color5}Machine${color} $nodename  |  \
+${color2}Uptime ${color} $uptime ${color}| \
+${color3}Kernel${color} $kernel  |  \
+${color4}Cpu: ${color}${cpubar} ${cpu}% ${freq_g (1)} GHz |  \
+${color5}Ram: ${color}${membar 6, 20} ${color6}${mem}${color 00CBEE}/${color}${memmax}  |  \
+${color fff}Root: ${color}${font}${fs_bar 6,60 /} ${color6}${fs_used /}/${color}${fs_size /}                 \ 
