--- a/.cconfig/i3status.conf
+++ b/.cconfig/i3status.conf
@@ -4,7 +4,7 @@ general {
   interval = 5
 }
 
-order += "ipv6"
+#order += "ipv6"
 #order += "disk /"
 order += "wireless wlp1s0"
 order += "tztime local"
