gitupdate.sh >> dotfiles

--- a/.cconfig/conky.conf
+++ b/.cconfig/conky.conf
@@ -1,75 +1,55 @@
-alignment top_left
-background yes
-border_width  0
-cpu_avg_samples 2
-color0 f2cfa9
-color1 5294e2
-color2 5294e2
-#color0 9d3b2e
-#color0 858c97 
-#color2 2b2e39
-default_color faf0e6
-default_outline_color faf0e6
-default_shade_color faf0e6
-draw_borders no
-draw_graph_borders yes
-draw_outline no
-draw_shades no
-double_buffer yes
-use_xft yes
-xftfont Hyperspace:size=9
-#xftfont DejaVu Sans Mono:size=10
-gap_x 50
-gap_y 50
-#minimum_height 5
-#minimum_width 5
-no_buffers yes
-out_to_console no
-out_to_stderr no
-extra_newline no
-own_window yes
+own_window yes                                                                                     
 own_window_class Conky
-own_window_type desktop
+#own_window_colour 282828
 own_window_transparent yes
-pad_percents 3.0
-stippled_borders 0
-update_interval 1.0
-uppercase no
-use_spacer left
-show_graph_scale no
-show_graph_range no
+#own_window_argb_visual yes
+#own_window_argb_value 0
+own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
+own_window_type desktop
+double_buffer yes
+use_spacer right 
+use_xft yes
+#font snap-7
+xftfont Hyperspace:bold:size=7
+# xftfont DejaVu Sans Light:size=8
+xftalpha 1
+text_buffer_size 2048 
+# alignment is disabled when own_window_type is dock
+alignment top_right
+gap_x -210
+gap_y 10
+#gap_y 150
+default_bar_size 20 6
 short_units yes
+background yes
 
+# Colours, Sizes, Fonts & Margins
+update_interval 1.0
+stippled_borders 0
+minimum_size 1920 6
+maximum_width 1920
+border_width 10 
+default_color d3d3d3
+# Text
+draw_outline no
+draw_borders no
+uppercase yes
+draw_shades no 
+
+color0 a6e22e # Light green
+color1 beed5f # Lime
+color2 fd971f # Light Orange
+color3 ff669d # Pink
+color4 9e6ffe # Purple
+color5 00CBEE # Blue
+color6 6EC6D4 # Light grey
+alignment top_middle
 
 TEXT
-${color0}${exec echo 'welcome to paradise'} 
-${color2}│${color0} 
-${color2}│${color0} 
-${color2}├─╶${color0} system 
-${color2}│   ├─╶${color0} distro     ${color1}[${color0} ${distribution} ${execi 1000 uname -m} ${color1}]
-${color2}│   ├─╶${color0} kernel    ${color1}[${color0} $kernel ${color1}]
-${color2}│   ├─╶${color0} user       ${color1}[${color0} ${uid_name 1000} ${color1}] 
-${color2}│   ├─╶${color0} host       ${color1}[${color0} $nodename ${color1}]
-${color2}│   ├─╶${color0} consoles ${color1}[${color0} ${user_terms} ${color1}] 
-${color2}│   ├─╶${color0} uptime   ${color1}[${color0} $uptime ${color1}] 
-${color2}│   │${color0} 
-${color2}│   ├─╶${color0} entropy  ${color1}[${color0}${entropy_perc}% ${color1}]${color0} ${color1}[${color0} ${entropy_avail}/${entropy_poolsize} ${color1}]${color0} 
-${color2}│   │${color0} 
-${color2}│   └─╶${color0} packages 
-${color2}│       ├─╶${color0} installed ${color1}[${color0} ${execi 1000 pacman -Qq | wc -l} ${color1}]${color0} 
-${color2}│       └─╶${color0} aur       ${color1}[${color0} ${exec pacaur -Qa | wc -l} ${color1}]${color0} 
-${color2}└─╶${color0} status 
-${color2}    ├─╶${color0} mem 
-${color2}    │   ├─╶${color0} cpu ${color1}${cpubar 7,30} ${color0}${cpu}% 
-${color2}    │   ├─╶${color0} ram ${color1}${membar 7,29} ${color0}${mem}/${memmax} 
-${color2}    │   │ 
-${color2}    │   └─╶${color0} ${color1}[${color0} ${exec echo } ${color1}]${color0} 
-${color2}    │       ├─╶${color0}  ${color1}[${color0} ${exec echo } ${color1}]${color0} 
-${color2}    │       ├─╶${color0}  ${color1}[${color0} ${exec echo } ${color1}]${color0} 
-${color2}    │       └─╶${color0}  ${color1}[${color0} ${exec echo } ${color1}]${color0} 
-${color2}    └─╶${color0} speed
-${color2}        ├─╶${color0} ping ${color1}[${color0} ${exec ping 8.8.8.8 -c 1 | grep time= | rev | cut -c 4-12 | rev | cut -c 6-} ms ${color1}]${color0} 
-${color2}        │ 
-${color2}        ├─╶${color0} down ${color1}[${color0} ${downspeed wlp1s0} ${color1}]${color0} 
-${color2}        └─╶${color0} up   ${color1}[${color0} ${upspeed wlp1s0} ${color1}]${color0} 
-
+${alignc}${color0}Arch Linux${color}  |  \
+${color5}Machine${color} $nodename  |  \
+${color2}Uptime ${color} $uptime ${color}| \
+${color3}Kernel${color} $kernel  |  \
+${color4}Cpu: ${color}${cpubar} ${cpu}% ${freq_g (1)} GHz |  \
+${color5}Ram: ${color}${membar 6, 20} ${color6}${mem}${color 00CBEE}/${color}${memmax}  |  \
+${color fff}Root: ${color}${font}${fs_bar 6,60 /} ${color6}${fs_used /}/${color}${fs_size /}                  
