--- a/.cconfig/conky.conf
+++ b/.cconfig/conky.conf
@@ -38,7 +38,7 @@ TEXT
 ${offset 20}${voffset 738}${color0}  $kernel Linux ${color}  |  \
 ${color5}Machine${color} $nodename  |  \
 ${color2}Uptime ${color} $uptime  |  \
-${color3}Bat ${color} $battery_short  \
+${color3}Bat ${color} $battery_short  |  \
 ${color4}Cpu ${color}${cpubar} ${cpu}% ${freq_g (1)} GHz |  \
 ${color5}Ram ${color}${membar 6, 20} ${color6}${mem}${color 00CBEE}/${color}${memmax}  |  \
 ${color fff}/  ${color}${font}${fs_bar 6,60 /} ${color6}${fs_used /}/${color}${fs_size /}  |  \
