--- a/._bashrc
+++ b/._bashrc
@@ -1,17 +1,15 @@
 # ~/.bashrc -- executed by bash(1) for non-login shells -- @ryankeleti --- mini-bash
 [[ $- != *i* ]] && return; PS1='[\u@\h \W]\$ ';shopt -s histappend cmdhist checkwinsize autocd
-HISTFILE=1000;HISTFILESIZE=;HISTCONTROL="erasedups:ignoreboth";export HISTIGNORE="&:ls:[bf]g:exit:qq:la:history:dir:wm:xrdbm:cdd:diskspace:dud1";unset HISTFILE
+HISTFILE=;HISTFILESIZE=;HISTCONTROL="erasedups:ignoreboth";export HISTIGNORE="&:ls:[bf]g:exit:qq:la:history:dir:cdd";unset HISTFILE
 alias cdd="cd ~/dotfiles";alias qq="exit";alias rm="rm -i";alias mv="mv -i";alias dir='dir --color=auto';alias ls='ls --color=auto';alias la='ls -AF'
-alias dud1="du -d1 -h|sort -hr";alias diskspace="du -S | sort -n -r |more";alias wm="sudo wifi-menu -o wlp1s0";alias xrdbm="xrdb -merge ~/.Xresources"
-alias v="vim --noplugins";alias vi="vim";bind -x '"\C-b": clear && printf "\e[3J"';export PROMPT_COMMAND=lastcmd
+alias dud1="du -d1 -h|sort -hr";alias diskspace="du -S | sort -n -r |more";alias wm="sudo wifi-menu -o wlp1s0"
+alias v="vim --noplugins";bind -x '"\C-b": clear && printf "\e[3J"';export PROMPT_COMMAND=lastcmd
 function lastcmd () { local EXIT="$?"; PS1=""
-local ecol='\[\e[0m\]';local rcol='\[\e[0;31m\]';local gcol='\[\e[1;32m\]';local ycol='\[\e[0;36m\]';local bcol='\[\e[0;34m\]';local pcol='\[\e[0;35m\]';local ocol='\[\e[1;31m\]'
-export PS1="\n[ \u@\h \W ] \w [$EXIT] $(parse_git_branch)\n";if [ $EXIT != 0 ]; then PS1+="${rcol}\$ >${ecol}  ";else PS1+="${gcol}\$ >${ecol}  ";fi
+local ecol='\[\e[0m\]';local rcol='\[\e[0;31m\]';local gcol='\[\e[1;32m\]'
+export PS1="[\u@\h \W $(parse_git_branch)][$EXIT] ";if [ $EXIT != 0 ]; then PS1+="${rcol}\$ >${ecol}  ";else PS1+="${gcol}\$ >${ecol}  ";fi
 }
-padset () { synclient TapButton1=1;synclient TapButton2=3;synclient TapButton3=2
-}
+#padset () { synclient TapButton1=1;synclient TapButton2=3;synclient TapButton3=2}
 parse_git_branch () { git branch 2> /dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/ (\1)/'
 }
-bashstart () { echo -e $(uname -rmo)'  |  '$SHELL
-}
+uname -rmo
 
